force-app/main/default/objects/Asset/fields/Device_Category__c.field-meta.xml
<CustomField>
    <fullName>Device_Category__c</fullName>
    <label>Device Category</label>
    <type>Picklist</type>
    <description>Type of medical device</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blood Collection</fullName>
            </value>
            <value>
                <fullName>Apheresis</fullName>
            </value>
            <value>
                <fullName>Cell Therapy</fullName>
            </value>
            <value>
                <fullName>Transfusion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>