force-app/main/default/objects/Asset/fields/Error_Code__c.field-meta.xml
<CustomField>
    <fullName>Error_Code__c</fullName>
    <label>Error Code</label>
    <type>Text</type>
    <length>20</length>
    <description>Last known error code reported by the device</description>
</CustomField>