force-app/main/default/objects/Asset/fields/Warranty_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Expiry__c</fullName>
    <label>Warranty Expiry</label>
    <type>Date</type>
    <description>When the device warranty expires</description>
</CustomField>